:zap: 优化 DefaultVFS#findJarForResource